add HttpMsgOf