@@ -3,6 +3,8 @@ plugins {
 }
 
 apply plugin: 'java'
+sourceCompatibility = 1.11
+targetCompatibility = 1.11
 
 allprojects {
     repositories {
@@ -25,3 +27,15 @@ dependencies {
     testCompile "junit:junit:4.4"
     testCompile "org.assertj:assertj-core:3.11.1"
 }
+
+//tasks.withType(JavaCompile) {
+//    options.compilerArgs += "--enable-preview"
+//}
+//
+//tasks.withType(Test) {
+//    jvmArgs += "--enable-preview"
+//}
+//
+//tasks.withType(JavaExec) {
+//    jvmArgs += '--enable-preview'
+//}
